css/docs-app.css
@charset "utf-8";

#docs-app .app-icon {
  background-image: -webkit-image-set(
      url(docs-icon-64.png) 1x,
      url(docs-icon-128.png) 2x);
}

#docs-app .sec-header-icon.group {
  background-image: -webkit-image-set(
     url(docs-section-group-1x.png) 1x,
     url(docs-section-group-2x.png) 2x);
}

#docs-app .sec-header-icon.backup {
  background-image: -webkit-image-set(
      url(docs-section-backup-1x.png) 1x,
      url(docs-section-backup-2x.png) 2x);
}

#docs-app .sec-header-icon.anywhere {
  background-image: -webkit-image-set(
      url(docs-section-anywhere-1x.png) 1x,
      url(docs-section-anywhere-2x.png) 2x);
}

#docs-app .app-side-footer {
  background-color: #2a70e8;
}

/**
 * Main part
 */

#docs-main {
  display: -webkit-flex;
  -webkit-flex-direction: column;
  -webkit-align-items: center;
  overflow: hidden;
}

#docs-app .docs-header {
  width: 800px;
  display: -webkit-flex;
  margin-top: 40px;
  -webkit-flex: none;
  -webkit-align-items: flex-start;
}

#docs-app .docs-title {
  -webkit-user-select: none;
  cursor: default;
  font: 22px/33px 'Arial';
}

#docs-app .space {
  -webkit-flex: 1 0 0;
}

#docs-app .user-icon {
  width: 30px;
  height: 25px;
  -webkit-margin-end: 5px;
  background-color: #ccc;
  box-sizing: border-box;
  position: relative;
  margin-bottom: 8px;
  background: no-repeat center;
}

#docs-app .user-icon::after {
  content: '';
  display: block;
  width: 30px;
  height: 6px;
  top: 27px;
  background-color: #ccc;
  position: absolute;
}

#docs-app .user-icon.charles {
  background-color: #13955c;
  background-image: -webkit-image-set(
      url(docs-user-charles-1x.png) 1x,
      url(docs-user-charles-2x.png) 2x);
}

#docs-app .user-icon.charles::after {
  background-color: #13955c;
}

#docs-app .user-icon.edgar {
  background-color: #f4b400;
  background-image: -webkit-image-set(
      url(docs-user-edgar-1x.png) 1x,
      url(docs-user-edgar-2x.png) 2x);
}

#docs-app .user-icon.edgar::after {
  background-color: #f4b400;
}

#docs-app .user-icon.fredrick {
  background-color: #9e69af;
  background-image: -webkit-image-set(
      url(docs-user-fredrick-1x.png) 1x,
      url(docs-user-fredrick-2x.png) 2x);
}

#docs-app .user-icon.fredrick::after {
  background-color: #9e69af;
}

#docs-app .share {
  -webkit-margin-start: 5px;
  box-sizing: border-box;
  border: 1px solid rgba(206,206,206,0.3);
  border-radius: 2px;
  padding: 0 8px;
  height: 35px;
  margin-top: -1px;
  margin-bottom: -1px;
  width: 96px;
  display: -webkit-flex;
  background-color: #f1f1f1;
  outline: none;
}

#docs-app .share-icon {
  background-image: -webkit-image-set(
      url(docs-share-1x.png) 1x,
      url(docs-share-2x.png) 2x);
  width: 32px;
  height: 32px;
  -webkit-flex: none;
  -webkit-margin-end: 2px;
}

#docs-app .share-label {
  font-family: 'Arial';
  font-size: 13px;
  color: #777;
  line-height: 31px;
  text-align: center;
  -webkit-flex: none;
}

#docs-app .share .balloon {
  width: 250px;
  left: -77px;
}

#docs-app .docs-menu-container {
  width: 800px;
  -webkit-flex: none;
  display: -webkit-flex;
  -webkit-justify-content: flex-start;
}

#docs-app .docs-menu {
  display: -webkit-flex;
  -webkit-flex: none;
  color: #777;
  -webkit-justify-content: flex-start;
  width: auto;
  -webkit-user-select: none;
  cursor: default;
}

#docs-app .docs-menu-item {
  -webkit-margin-end: 16px;
  height: 16px;
  font-family: 'Arial';
  font-size: 13px;
  text-align: center;
  -webkit-flex: 0 0 auto;
}

#docs-app .docs-menu .balloon {
  width: 300px;
}

[dir=ltr] #docs-app .docs-menu .balloon {
  left: 0px;
}

[dir=rtl] #docs-app .docs-menu .balloon {
  right: 0px;
}

#docs-app .docs-toolbar {
  width: 800px;
  height: 40px;
  margin-top: 30px;
  -webkit-flex: none;
  background-image: -webkit-image-set(
      url(docs-toolbar-1x.png) 1x,
      url(docs-toolbar-2x.png) 2x);
  border-radius: 2px;
  box-shadow: 0 0 2px 1px rgba(206, 206, 206, 0.75);
}

#docs-app .docs-toolbar .balloon {
  width: 300px;
  left: 252px;
}

#docs-app .docs-ruler {
  width: 800px;
  height: 14px;
  background-color: #f8f8f8;
  margin: 20px -3px 0;
  -webkit-flex: none;
  background-image: url(docs-ruler.png);
}

#docs-app .paper-scroll-region {
  -webkit-flex: auto;
  width: 100%;
  overflow-x: hidden;
  overflow-y: scroll;
  -webkit-box-sizing: border-box;
  padding-bottom: 35px;
  margin-top: 15px;
}

#docs-app .paper-container {
  position: relative;
  margin: 5px auto;
  width: 800px;
}

#docs-app .paper,
#docs-app .measure {
  -webkit-box-sizing: border-box;
  font-family: 'Arial';
  font-size: 16px;
  line-height: 18px;
  height: 1160px;
  padding: 90px;
  width: 800px;
}

#docs-app .paper {
  -webkit-flex: auto;
  background-color: white;
  border-style: none;
  box-shadow: 0 0 2px 1px rgba(206, 206, 206, 0.75);
  display: block;
  outline: none;
  overflow: hidden;
  resize: none;
}

#docs-app .measure {
  left: 0;
  pointer-events: none;
  position: absolute;
  top: 0;
  visibility: hidden;
}

#docs-app .measure-text,
#docs-app .measure-cursor {
  white-space: pre-wrap;
}

#docs-app .cursor {
  -webkit-background-clip: content-box;
  -webkit-margin-start: -4px;
  cursor: text;
  display: none;
  height: 24px;
  margin-top: -3px;
  padding: 0 4px;
  position: absolute;
  width: 2px;
}

#docs-app .cursor.active {
  display: block;
}

[dir=ltr] #docs-app .cursor::before,
[dir=ltr] #docs-app .cursor::after {
  left: 2px;
}

[dir=rtl] #docs-app .cursor::before,
[dir=rtl] #docs-app .cursor::after {
  right: 2px;
}

/**
 * Small box at the top of cursor.
 */
#docs-app .cursor::before {
  bottom: 24px;
  content: '';
  display: block;
  height: 6px;
  pointer-events: none;
  position: absolute;
  width: 6px;
}

/**
 * Name box at the top of cursor.
 */
#docs-app .cursor::after {
  bottom: 24px;
  color: white;
  content: attr(data-user-name);
  display: inline;
  font-family: 'Arial', sans-serif;
  font-size: 10px;
  line-height: 10px;
  opacity: 0;
  padding: 4px;
  pointer-events: none;
  position: absolute;
  white-space: nowrap;
  -webkit-transition-property: opacity;
  -webkit-transition-duration: 200ms;
}

#docs-app .cursor:hover::after,
#docs-app .cursor.typing::after {
  opacity: 1;
}

#docs-app .cursor.charles,
#docs-app .cursor.charles::before,
#docs-app .cursor.charles::after {
  background-color: #13955c;
}

#docs-app .cursor.edgar,
#docs-app .cursor.edgar::before,
#docs-app .cursor.edgar::after {
  background-color: #f4b400;
}

#docs-app .cursor.fredrick,
#docs-app .cursor.fredrick::before,
#docs-app .cursor.fredrick::after {
  background-color: #9e69af;
}

